# loop-iteration

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: goal-checker.md
.loop/: progress.md
.loop/iterate/20260623_a47e34/: progress.md  round1_meta.txt  scores.json
adapters/toy/: apply_variant.py  run_case.py
adapters/toy/agent_files/: SKILL.md  prompt.md  tools.json
agents/: harness-rewriter.md  quality-judge.md
commands/: self-iterate.md
docs/: report.md
docs/superpowers/plans/: 2026-06-23-plugin-ization.md  2026-06-23-self-iteration-loop.md  (+12 more)
evals/toy-basic/: goal.yaml  judge.md
examples/toy/: CLAUDE.md
scripts/: publish.sh
scripts/loop_iter/: adapter.py  adapter_generic.py  case_runner.py  cli.py  dashboard.py  gates.py  goal_check.py  judge.py  latency_feedback.py  llm_client.py  quality_prog.py  scoring.py  state.py  validate_spec.py
skills/case-evaluator/: SKILL.md
skills/loop-engineering/: SKILL.md
skills/self-iterate/: SKILL.md
skills/self-iterate-setup/: SKILL.md
src/loop_iter/: __init__.py  case_runner.py  goal_check.py  scoring.py
tests/: test_adapter.py  test_adapter_generic.py  test_bespoke_adapter_integration.py  test_case_runner.py  test_cli.py  test_dashboard.py  test_dashboard_integration.py  test_gates.py  test_goal_check.py  test_golden_round.py  test_judge.py  test_latency_feedback.py  test_local_service_integration.py  test_quality_prog.py  test_quality_target_integration.py  test_run_case.py  test_scoring.py  test_smoke.py  test_state.py  test_validate_spec.py
(+15 files in other folders)
