[project]
name = "loop-iter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.pytest.ini_options]
pythonpath = ["scripts", "."]
testpaths = ["tests"]
